# semisearch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  Cross.toml  FINAL_TEST.md  ONNX_RESOLUTION_SUMMARY.md  README.md  SEMANTIC_SEARCH_ARCHITECTURE_PLAN.md  SOLID_DRY_ANALYSIS.md  SUCCESS.md  TEST_AUTO_MERGE.md  ULTIMATE_TEST.md  clippy.toml  demo_auto_strategy.sh  deny.toml  setup-github-auth.sh  sync-git-config.sh  test-branch-protection.md  test_simplify.rs  update-dev-env.sh
.cargo/: config.toml
.devcontainer/: README.md  SCRIPTS.md  devcontainer.json  install-more-tools.sh  setup-gh-auth.sh  setup.sh  test-setup.sh  update.sh
.devcontainer/scripts/: new-developer-setup.sh
.github/: CI.md  CODEOWNERS  README.md  pull_request_template.md
.github/workflows/: auto-merge-solo.yml  auto-merge.yml  ci.yml  release.yml
docs/: BEGINNERS_GUIDE.md  ERROR_HANDLING_FOLLOWUP.md  PROJECT_ASSESSMENT.md  SEMANTIC_SEARCH_ARCHITECTURE_PLAN.md  UX_REMEDIATION_PLAN.md  semantic-search-accessibility-assessment.md  semisearch-user-assessment.md
examples/: context_detection_demo.rs
migrations/: 001_initial.sql
scripts/: install-hooks.sh  pre-commit.sh
src/: capability_detector.rs  lib.rs  main.rs  main_new.rs
src/cli/: mod.rs
src/context/: mod.rs  project_detector.rs  search_config.rs
src/core/: embedder.rs  indexer.rs  indexer_builder.rs  mod.rs  patterns.rs  progress_reporter.rs
src/errors/: mod.rs  translator.rs  user_errors.rs  user_friendly.rs
src/help/: contextual.rs  interactive.rs  mod.rs
src/output/: human_format.rs  mod.rs  result_grouper.rs
src/query/: analyzer.rs  lightweight_analyzer.rs  mod.rs
src/search/: auto_strategy.rs  file_type_strategy.rs  fuzzy.rs  keyword.rs  mod.rs  regex_search.rs  semantic.rs  strategy.rs  tfidf.rs
src/storage/: database.rs  mod.rs
src/text/: mod.rs  processor.rs  tokenizer.rs
src/user/: feature_discovery.rs  mod.rs  usage_tracker.rs
test_files/: README.md  app.js
tests/: advanced_filtering_tests.rs  advanced_flag_tests.rs  auto_strategy_tests.rs  cli_demo.rs  cli_integration_tests.rs  context_detection_test.rs  context_detection_tests.rs  default_command_tests.rs  e2e_progressive_discovery_tests.rs  e2e_tests.rs  error_handling_enhanced_tests.rs  error_handling_tests.rs  file_type_strategy_tests.rs  help_system_tests.rs  human_output_tests.rs  integration_tests.rs  natural_path_tests.rs  phase2_storage_tests.rs  phase3_text_processing_tests.rs  phase4_comprehensive_test.rs.reference  phase4_embeddings_tests.rs  progressive_feature_discovery_tests.rs  query_analyzer_tests.rs  run-all.sh  semantic_search_test.rs  smart_query_analysis_tests.rs  test-performance.sh  test-search.sh  test_phase2_features.sh  test_phase3_features.sh  test_phase4_features.sh  typo_correction_tests.rs  validate-ci.sh
tests/e2e/: README.md  advanced_features_tests.rs  context_detection_tests.rs  error_handling_tests.rs  ux_validation_tests.rs
tests/test-data/: README.md
tests/test-data/code-projects/js-project/: package.json
tests/test-data/code-projects/js-project/src/: index.js
tests/test-data/code-projects/js-project/src/middleware/: errorHandler.js
tests/test-data/code-projects/js-project/src/routes/: index.js  product.routes.js  user.routes.js
tests/test-data/code-projects/js-project/src/utils/: logger.js
tests/test-data/code-projects/python-project/: pyproject.toml
tests/test-data/code-projects/python-project/src/: __init__.py  database.py  main.py  models.py
tests/test-data/code-projects/python-project/src/services/: __init__.py  user_service.py
tests/test-data/code-projects/rust-project/: Cargo.toml
tests/test-data/code-projects/rust-project/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  processor.rs
tests/test-data/code-projects/rust-project/tests/: search_tests.rs
tests/test-data/docs-projects/api-docs/: README.md
tests/test-data/docs-projects/api-docs/endpoints/: README.md
tests/test-data/docs-projects/api-docs/guides/: README.md  quick-start.md
tests/test-data/docs-projects/api-docs/overview/: README.md  authentication.md
tests/test-data/docs-projects/user-manual/: README.md
tests/test-data/docs-projects/user-manual/features/: basic.md
tests/test-data/docs-projects/user-manual/getting-started/: README.md
tests/test-data/docs-projects/user-manual/troubleshooting/: common-issues.md
tests/test-data/mixed-documents/data/: config.json  sales_data.csv
tests/test-data/mixed-documents/notes/: project_ideas.md  todo.txt
tests/test-data/mixed-documents/scripts/: backup.sh  data_processor.py
tests/test-data/mixed-documents/text/: meeting_notes.txt
tests/test-data/mixed-projects/web-app/: README.md  package.json
tests/test-data/mixed-projects/web-app/docs/api/: README.md
tests/test-data/mixed-projects/web-app/docs/development/: README.md
tests/test-data/mixed-projects/web-app/src/: index.js
tests/test-data/mixed-projects/web-app/src/api/: routes.js
utils/query-analyzer/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  test_queries.sh
utils/query-analyzer/src/: adaptive_search.rs  lib.rs  lightweight_analysis.rs  main.rs
