[package]
name = "semisearch"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.81.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ignore = "0.4"
# Phase 2: Storage Layer dependencies
rusqlite = { version = "0.29", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
# Phase 2: Enhanced Search dependencies
fuzzy-matcher = "0.3"
regex = "1.0"
edit-distance = "2.1"
# Phase 3: Text Processing dependencies
unicode-segmentation = "1.10"
thiserror = "1.0"
rayon = "1.7"
rustc-hash = "1.1"
# Phase 4: Local Embeddings dependencies
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
indicatif = "0.17"
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.3.6", features = ["html_reports"] }
proptest = "1.0" 