[package]
name = "search"
version = "0.4.0"
edition = "2021"
authors = ["Assistant"]
description = "A semantic search CLI tool for local files"
license = "MIT"
repository = "https://github.com/user/search"
rust-version = "1.85"

[[bin]]
name = "semisearch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ignore = "0.4"
indicatif = "0.17"
dirs = "5.0"
unicode-segmentation = "1.10"
sys-info = "0.9"
num_cpus = "1.0"
tempfile = "3.8"

# Search dependencies
fuzzy-matcher = "0.3"
regex = "1.0"
edit-distance = "2.1"
rustc-hash = "1.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# ML and embeddings (Phase 4)
ort = { version = "1.15", features = ["copy-dylibs"], optional = true }
tokenizers = { version = "0.13", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.15", optional = true }
reqwest = { version = "0.11", features = ["rustls-tls", "stream"], default-features = false }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["tfidf-only"]
neural-embeddings = ["ort", "tokenizers", "ndarray"]
tfidf-only = [] 