[package]
name = "search"
version = "0.6.0"
edition = "2021"
authors = ["Assistant"]
description = "A semantic search CLI tool for local files"
license = "MIT"
repository = "https://github.com/user/search"
rust-version = "1.85"

[[bin]]
name = "semisearch"
path = "src/main.rs"

[[bin]]
name = "semisearch-new"
path = "src/main_new.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ignore = "0.4"
dirs = "5.0"
unicode-segmentation = "1.10"
sys-info = "0.9"
tempfile = "3.8"

# Search dependencies
fuzzy-matcher = "0.3"
regex = "1.0"
edit-distance = "2.1"
rustc-hash = "1.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }


# Dynamic loading for optional features
libloading = "0.8"

# ML and embeddings (Phase 4) - Optional at runtime
ort = { version = "1.15", features = ["copy-dylibs", "load-dynamic"], optional = true }
tokenizers = { version = "0.15", optional = true }
ndarray = { version = "0.15", optional = true }
reqwest = { version = "0.11", features = ["rustls-tls", "stream"], default-features = false, optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
neural-embeddings = ["ort", "tokenizers", "ndarray", "reqwest"]
tfidf-only = []  # Legacy feature for minimal builds

# Build optimizations
[profile.release] 