[package]
name = "test-rust-project"
version = "0.1.0"
edition = "2021"
authors = ["Test User <test@example.com>"]
description = "A mock Rust project for testing"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3"
criterion = "0.4"

[[bin]]
name = "test-app"
path = "src/main.rs"

[lib]
name = "testlib"
path = "src/lib.rs" 